# github-rdp-mega-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: audit-security.yml  auto-scheduler.yml  backup-config.yml  build-deb.yml  build-msi.yml  cleanup-old-artifacts.yml  credential-rotate.yml  dev-session.yml  force-kill.yml  gaming-session.yml  health-monitor.yml  kali-rdp.yml  lite-rdp.yml  minimal-session.yml  multi-kali.yml  multi-runner.yml  pro-rdp.yml  quick-tunnel.yml  release.yml  status-check.yml  sync-configs.yml  test-suite.yml  ubuntu-rdp.yml  ultimate-rdp.yml  windows-optimize.yml
configs/: android-termux-packages.json  android.yaml  auto-generated-defaults.json  client-tools-config.json  default.yaml  kali-tools.json  kali.yaml  notification-channels.json  optimization-profiles.json  security-policies.json  session-profiles.json  software-list.json  tunnel-providers.json  virtual-environments.json  windows-features.json  windows.yaml
core/bash/: auto-config.sh  cleanup.sh  health-check.sh  install-software.sh  keepalive.sh  optimize-linux.sh  rotate-password.sh  setup-rdp.sh  setup-tunnel.sh  setup-venv.sh  utils.sh
core/powershell/: auto-config.ps1  cleanup.ps1  health-check.ps1  install-software.ps1  keepalive.ps1  notify.ps1  optimize-windows.ps1  rotate-password.ps1  setup-rdp.ps1  setup-tunnel.ps1  setup-venv.ps1  utils.ps1
core/shared/: artifact-spec.md  common-headers.txt  tunnel-regex.md
docker/: README.md  docker-compose.yml
docker/kali-rdp/: Dockerfile  entrypoint.sh
docker/ubuntu-rdp/: Dockerfile  entrypoint.sh
docker/windows-rdp/: Dockerfile  entrypoint.sh
docs/: ANDROID.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  KALI.md  SECURITY.md  TUNNELS.md  WINDOWS.md
installer/: pre-install-check.sh  universal-installer.sh  universal-uninstaller.sh
installers/android/: rdp-toolkit.sh  setup-termux.sh
installers/debian/: build.sh  control  postinst  postrm  prerm  rdp-toolkit_9.0.0_all.deb
installers/universal/: install.sh  uninstall.sh
installers/windows/: build.bat  installer.nsi
rdp_toolkit/: __init__.py  __main__.py  cli.py  config.py
rdp_toolkit/core_ps/: cleanup.ps1  health-check.ps1  install-software.ps1  keepalive.ps1  optimize-windows.ps1  rotate-password.ps1  setup-rdp.ps1  setup-tunnel.ps1  utils.ps1
rdp_toolkit/core_sh/: cleanup.sh  health-check.sh  install-software.sh  keepalive.sh  optimize-linux.sh  rotate-password.sh  setup-rdp.sh  setup-tunnel.sh  utils.sh
rdp_toolkit/notify/: __init__.py  base.py  discord.py  manager.py  slack.py  telegram.py
rdp_toolkit/rdp/: __init__.py  runner.py
rdp_toolkit/tunnel/: __init__.py  base.py  cloudflare.py  localhost_run.py  localtunnel.py  manager.py  serveo.py
rdp_toolkit/utils/: __init__.py  crypto.py  net.py  system.py
rdp_toolkit/vm/: __init__.py  compose.py  manager.py
scripts/: rdp-toolkit
scripts/completions/: rdp-toolkit.bash  rdp-toolkit.fish  rdp-toolkit.zsh
skills/: memory.md
tests/: test_json_syntax.py  test_yaml_syntax.py
tools/bash/: install.sh  rdp-cli.sh  tunnel-bridge.sh  uninstall.sh
tools/powershell/: rdp-cli.ps1
tools/python/: bulk-kill.py  config-validator.py  fetch-creds.py  rdp-cli.py  release-builder.py  session-stats.py  tunnel-health-check.py
venvs/docker/: Dockerfile.kali  docker-compose.yml  entrypoint.sh
venvs/vagrant/: Vagrantfile.kali
